--- a/assets/scss/theme/_style.scss
+++ b/assets/scss/theme/_style.scss
@@ -79,7 +79,7 @@ a {
 /* Theme All Transitions
 ------------------------------- */
 a, #mainNav, .theme-button, .product-item, .best-seller-item, .featured-product-item, .popular-categories-item, .product-details-share button, #checkout-address-modal .btn-secondary,
-.filtering-part form button, .product-title {
+.filtering-part form button, .product-title, p.shop-name{
     transition: all .5s ease-in-out;
 }
 
@@ -921,17 +921,6 @@ button:focus {
 -------------------------------------------*/
 
 /*-------------------------------------------
-    5. Breadcrumb Area CSS Start
--------------------------------------------*/
-// .breadcrumb-item + .breadcrumb-item::before {
-//     content: "/";
-// }
-
-/*-------------------------------------------
-    5. Breadcrumb Area CSS End
--------------------------------------------*/
-
-/*-------------------------------------------
     Categories Sidebar Menu Items CSS Start
 -------------------------------------------*/
 /*Left Categories Menu CSS*/
@@ -945,6 +934,9 @@ button:focus {
 .parent_category_list > li {
     padding: 0 10px;
     position: relative;
+    .mega-menu ul li a {
+        padding-left: 0;
+    }
 }
 .parent_category_list li a {
     padding: 10px 8px;
@@ -962,7 +954,7 @@ button:focus {
 	margin-top: 0;
 	position: absolute;
 	left: 102%;
-	background-color: #ffffff;
+	background-color: #fff;
 	width: 750px;
 	z-index: 9;
 	opacity: 0;
@@ -1167,7 +1159,7 @@ button:focus {
     &:hover {
         .img-wrap {
             img {
-                transform: scale(1.2) rotate(10deg);
+                transform: scale(1.2) rotate(2deg);
             }
             .product_action_box {
                 top: 41%;
@@ -1185,6 +1177,9 @@ button:focus {
 }
 .product-item .product-content {
 	padding: 10px;
+}
+.product-price-box .price , .product-price-box .discounted-price {
+    padding-top: 2px;
 }
 
 /*Product Item CSS End*/
@@ -1777,18 +1772,23 @@ span.single-counter-box {
 // Shop box wrap
 .shop-box {
 	background-color: #fff;
-	padding: 10px;
+	padding: 20px;
 	text-align: center;
-	box-shadow: 0 0 4px 1px rgba(0,0,0,0.05);
+	box-shadow: 0 0 20px 3px rgb(0 0 0 / 5%);
     margin-bottom: 30px;
-}
-.shop-img-wrap {
-	height: 180px;
-	margin-bottom: 10px;
-}
-.shop-img-wrap img {
-	width: auto;
-	height: 150px;
+    .shop-img-wrap {
+        height: 160px;
+        margin-bottom: 10px;
+            img {
+            width: auto;
+            height: 150px;
+        }
+    }
+    &:hover {
+        p.shop-name {
+            color: $color-blue;
+        }
+    }
 }
 
 // Shop Profile Page CSS
@@ -1847,7 +1847,7 @@ span.single-counter-box {
 }
 .home-office-select span {
 	border: 1px solid var(--border-secondary);
-	padding: 8px 10px;
+	padding: 8px 10px 5px;
     margin-right: 10px;
 }
 .home-office-select span.active {
@@ -2461,35 +2461,29 @@ span.single-counter-box {
     margin-bottom: 30px;
     -webkit-transition: all ease .5s;
     transition: all ease .5s;
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-}
-.single-blog:hover {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px);
-}
-.single-blog .blog-img {
-    position: relative;
-    overflow: hidden;
-    a img {
-        width: 100%;
+    // -webkit-transform: translateY(0px);
+    // transform: translateY(0px);
+    .blog-img {
+        position: relative;
+        overflow: hidden;
+        a img {
+            width: 100%;
+            transition: all 0.5s ease-in-out;
+        }
+        img {
+            width: 100%;
+        }
+        span {
+            position: absolute;
+            bottom: 21px;
+            right: 20px;
+            background-color: #000;
+            padding: 5px 15px;
+            text-align: center;
+            display: inline-block;
+        }
     }
-    img {
-        width: 100%;
-    }
-}
-.single-blog .blog-img span {
-    position: absolute;
-    bottom: 21px;
-    right: 20px;
-    background-color: #000;
-    color: #fff;
-    padding: 5px 15px;
-    text-align: center;
-    display: inline-block;
-    font-size: 14px;
-}
-.single-blog .blog-content {
+    .blog-content {
     padding: 30px;
     position: relative;
     z-index: 1;
@@ -2499,35 +2493,46 @@ span.single-counter-box {
     &:hover h3 {
         color: var(--hover-color);
     }
-}
-.single-blog .blog-content ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    line-height: 1;
-    margin-bottom: 15px;
-}
-.single-blog .blog-content ul li {
-    font-size: 14px;
-}
-.single-blog .blog-content ul li i {
-    margin-right: 5px;
-}
-.single-blog .blog-content h3 {
-    margin-bottom: 18px;
-    -webkit-transition: all ease .5s;
-    transition: all ease .5s;
-    font-size: 21px;
-}
-.single-blog .blog-content p {
-    margin-bottom: 20px;
-    -webkit-transition: all ease .5s;
-    transition: all ease .5s;
-}
-.read-more {
-    font-weight: 600;
-    font-size: 15px;
-    color: #0e0f11;
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        line-height: 1;
+        margin-bottom: 15px;
+        li {
+            font-size: 14px;
+            i {
+                margin-right: 5px;
+            }
+        }
+    }
+    h3 {
+        margin-bottom: 18px;
+        -webkit-transition: all ease .5s;
+        transition: all ease .5s;
+        font-size: 21px;
+    }
+    p {
+        margin-bottom: 20px;
+        -webkit-transition: all ease .5s;
+        transition: all ease .5s;
+    }
+    .read-more {
+        font-weight: 600;
+        font-size: 15px;
+        color: #0e0f11;
+    }
+    
+    }
+    &:hover {
+        .blog-img {
+            a img {
+                width: 100%;
+                transform: scale(1.2) rotate(2deg);
+            }
+        }
+
+    }
 }
 
 // Blog Details
